@@ -1,3 +1,8 @@
+Wed Mar  4 08:14:35 UTC 2009  Olli Savia  <ops@iki.fi>
+
+        * tests/Process_Manager_Test.cpp:
+          Added missing ACE_TEXT.
+
 Tue Mar  3 19:59:10 UTC 2009  Olli Savia  <ops@iki.fi>
 
         * apps/JAWS/clients/Blobby/Blob_Handler.cpp:
